tests/type_errors/length_concat_string.nos
# expect_error: does not implement Concat
# length() returns Int, Int ++ String should be caught
main() = {
    xs = [1, 2, 3]
    xs.length() ++ " items"
}
